Remove xalan classloader hacks for TFS SDK
Xalan and serializer seem to have been removed from the TFS SDK jar between the original release the workaround was added (14.0.3) and the current release (14.118). Seems unlikely these hacks are still required, and not sure what they might have been doing anyway :-)

--- a/build.gradle
+++ b/build.gradle
@@ -667,11 +667,9 @@ subprojects {
     }
   }
 
-  project.configurations*.exclude(group: 'javax.xml.bind')
-  project.configurations*.exclude(group: 'junit')
-  project.configurations*.exclude(group: 'dom4j')
-  project.configurations*.exclude(group: 'xalan')
-  project.configurations*.exclude(group: 'xml-apis')
+  project.configurations*.exclude(group: 'javax.xml.bind') // Moved to jakarta.xml.bind
+  project.configurations*.exclude(group: 'junit') // Moved to org.junit
+  project.configurations*.exclude(group: 'dom4j') // Moved to org.dom4j
 }
 
 task allDependencies {
