Disable console input/stdin for Tanuki Wrapper
Often (especially when testing the built docker images) we get errors when running within
containers (via `wrapper console`) such as:

  wrapper  | Failed to set JVM input handle to non blocking mode: Bad file descriptor (9)
  wrapper  | Failed to set JVM input handle to close on JVM exit: Bad file descriptor (9)
  wrapper  | Unable to set JVM's stdin: Bad file descriptor
  wrapper  | JVM exited while loading the application.

When running in regular mode on a direct Linux install via `wrapper start` the stdin isn't
attached to the wrapper anyway, so this should not be required at all. On advice from Tanuki
we can workaround this issue by disabling console input entirely. See
https://wrapper.tanukisoftware.com/doc/english/prop-disable-console-input.html

--- a/installers/linux.gradle
+++ b/installers/linux.gradle
@@ -204,7 +204,8 @@ def configureLinuxPackage(DefaultTask packageTask, InstallerType installerType, 
             if (eachLine == '#encoding=UTF-8') {
               def newLines = [
                 '#encoding=UTF-8',
-                "wrapper.working.dir=/var/lib/${installerType.baseName}"
+                "wrapper.working.dir=/var/lib/${installerType.baseName}",
+                'wrapper.disable_console_input=TRUE'
               ]
 
               (installerType.additionalEnvVars + installerType.additionalLinuxEnvVars).forEach { k, v ->
