--- a/installers/generic.gradle
+++ b/installers/generic.gradle
@@ -145,7 +145,8 @@ def configureGenericZip(Zip zipTask, InstallerType installerType) {
         if (eachLine == '#encoding=UTF-8') {
           def newLines = [
             '#encoding=UTF-8',
-            'wrapper.working.dir=..'
+            'wrapper.working.dir=..',
+            'wrapper.disable_console_input=TRUE'
           ]
 
           installerType.additionalEnvVars.forEach { k, v ->
