--- a/test/test-utils/build.gradle
+++ b/test/test-utils/build.gradle
@@ -32,7 +32,7 @@ dependencies {
   implementation project.deps.jettyUtil
   implementation project.deps.jettyServlet
   api project.deps.jettyWebapp
-  implementation project.deps.mail
+  implementation project.deps.jakartaMail
 
   api project.deps.assertJ
   api project.deps.hamcrest
