--- a/installers/generic.gradle
+++ b/installers/generic.gradle
@@ -146,7 +146,8 @@ def configureGenericZip(Zip zipTask, InstallerType installerType) {
           def newLines = [
             '#encoding=UTF-8',
             'wrapper.working.dir=..',
-            'wrapper.disable_console_input=TRUE'
+            'wrapper.disable_console_input=TRUE',
+            'wrapper.console.flush=TRUE'
           ]
 
           installerType.additionalEnvVars.forEach { k, v ->
