--- a/installers/linux.gradle
+++ b/installers/linux.gradle
@@ -205,7 +205,8 @@ def configureLinuxPackage(DefaultTask packageTask, InstallerType installerType, 
               def newLines = [
                 '#encoding=UTF-8',
                 "wrapper.working.dir=/var/lib/${installerType.baseName}",
-                'wrapper.disable_console_input=TRUE'
+                'wrapper.disable_console_input=TRUE',
+                'wrapper.console.flush=TRUE'
               ]
 
               (installerType.additionalEnvVars + installerType.additionalLinuxEnvVars).forEach { k, v ->
