Only initialize buildx builder if we are building images

--- a/docker/build.gradle
+++ b/docker/build.gradle
@@ -24,17 +24,19 @@ subprojects {
 
 tasks.register('initializeBuildx') {
   doFirst {
-    // Need to do once before everything (not in parallel) see https://github.com/docker/buildx/issues/344
-    def builderName = 'gocd-builder'
-    logger.lifecycle("Initializing docker buildx builder [$builderName]...")
+    if (!project.hasProperty('skipDockerBuild')) {
+      // Need to do once before everything (not in parallel) see https://github.com/docker/buildx/issues/344
+      def builderName = 'gocd-builder'
+      logger.lifecycle("Initializing docker buildx builder [$builderName]...")
 
-    project.exec { commandLine = ['docker', 'buildx', 'version'] }
-    project.exec {
-      commandLine = ['docker', 'buildx', 'rm', '--force', '--keep-state', builderName]
-      ignoreExitValue = true
+      project.exec { commandLine = ['docker', 'buildx', 'version'] }
+      project.exec {
+        commandLine = ['docker', 'buildx', 'rm', '--force', '--keep-state', builderName]
+        ignoreExitValue = true
+      }
+      project.exec { commandLine = ['docker', 'buildx', 'create', '--use', '--name', builderName] }
+      project.exec { commandLine = ['docker', 'buildx', 'inspect', '--bootstrap', builderName] }
     }
-    project.exec { commandLine = ['docker', 'buildx', 'create', '--use', '--name', builderName] }
-    project.exec { commandLine = ['docker', 'buildx', 'inspect', '--bootstrap', builderName] }
   }
 }
 
