Run frontend lints alongside jasmine task
Currently this runs duplicated on the divide-and-conquered agent/server unit tests
which is confusing as multiple jobs fail. It makes more sense to run this alongside the
jasmine tests since they run on JS for both old and new JS, they all depend on yarn install
and they now run at the start of the pipeline anyway, for fast feedback.

--- a/server/jasmine.gradle
+++ b/server/jasmine.gradle
@@ -146,6 +146,7 @@ task downloadChromeDriver(type: DownloaderTask) { thisTask ->
 task jasmineKarma(type: YarnRunTask) {
   description = 'Run new jasmine tests (typescript) via karma'
   dependsOn ':server:yarnInstall'
+  dependsOn ':server:lintNew'
   dependsOn ':server:compileAssetsWebpackDev'
 
   outputs.upToDateWhen { false }
@@ -158,6 +159,7 @@ task jasmineOld(type: YarnRunTask) {
   description = 'Run old jasmine tests (legacy JS) via jasmine-browser-runner'
   dependsOn driverImpl()
   dependsOn ':server:yarnInstall'
+  dependsOn ':server:lintOld'
   dependsOn ':server:compileAssetsRailsTest'
 
   outputs.upToDateWhen { false }
@@ -171,7 +173,7 @@ task jasmineOld(type: YarnRunTask) {
   }
 }
 
-task jasmine(dependsOn: [jasmineKarma, jasmineOld])
+task jasmine(dependsOn: [':server:lint', jasmineKarma, jasmineOld])
 
 task jasmineKarmaServer(type: YarnRunTask) {
   description = 'Run new jasmine tests (typescript) via karma inside a browser'
