--- a/server/lint.gradle
+++ b/server/lint.gradle
@@ -42,6 +42,7 @@ task eslintold(type: YarnRunTask) {
 task eslint(type: YarnRunTask) {
   description "Run ESLint"
   dependsOn 'yarnInstall'
+  dependsOn 'generateJSRoutes'
 
   workingDir = project.railsRoot
 
@@ -55,6 +56,7 @@ task eslint(type: YarnRunTask) {
 task tslint(type: YarnRunTask) {
   description "Run TSLint"
   dependsOn 'yarnInstall'
+  dependsOn 'generateJSRoutes'
 
   workingDir = project.railsRoot
 
@@ -64,7 +66,17 @@ task tslint(type: YarnRunTask) {
   source(project.file("${project.railsRoot}/tslint.json"))
 }
 
+task lintNew {
+  description 'Run lint tools on newer js/scss'
+  dependsOn eslint, tslint
+}
+
+task lintOld {
+  description 'Run lint tools on older legacy js/scss'
+  dependsOn stylelintold, eslintold
+}
+
 task lint {
   description 'Run all lint tools'
-  dependsOn stylelintold, eslintold, eslint, tslint
+  dependsOn lintNew, lintOld
 }
