Update wrapper license keys to renewed term
Enabled upgrade term obfuscation in Tanuki portal since this confuses users.

--- a/installers/include/wrapper-license-linux-go-agent.conf
+++ b/installers/include/wrapper-license-linux-go-agent.conf
@@ -6,14 +6,13 @@
 # wrapper.app.parameter.1=/usr/share/go-agent/lib/agent-bootstrapper.jar
 
 wrapper.license.type=DEV
-wrapper.license.id=202205130000008
+wrapper.license.id=202305310000010
 wrapper.license.licensee=ThoughtWorks
 wrapper.license.group=Go
 wrapper.license.dev_application=GoCD Agent On Linux
 wrapper.license.features=64bit
-wrapper.license.upgrade_term.begin_date=2008-06-03
-wrapper.license.upgrade_term.end_date=2023-06-03
-wrapper.license.key.1=695b-0ff6-399a-d1a6
-wrapper.license.key.2=27a9-4d9f-be26-1374
-wrapper.license.key.3=e06e-0a78-33aa-879f
-wrapper.license.key.4=d99e-356a-3c5a-f40f
+wrapper.license.key.0=4844-0af0-665c-88f0
+wrapper.license.key.1=54d1-8ca5-fc04-80fc
+wrapper.license.key.2=59e4-7b00-7e92-3e0d
+wrapper.license.key.3=adb7-3173-227c-d524
+wrapper.license.key.4=5a91-3471-7a16-ca11
