--- a/installers/include/wrapper-license-linux-go-server.conf
+++ b/installers/include/wrapper-license-linux-go-server.conf
@@ -6,14 +6,13 @@
 # wrapper.app.parameter.1=/usr/share/go-server/lib/go.jar
 
 wrapper.license.type=DEV
-wrapper.license.id=202205130000007
+wrapper.license.id=202305310000011
 wrapper.license.licensee=ThoughtWorks
 wrapper.license.group=Go
 wrapper.license.dev_application=GoCD Server On Linux
 wrapper.license.features=64bit
-wrapper.license.upgrade_term.begin_date=2008-06-03
-wrapper.license.upgrade_term.end_date=2023-06-03
-wrapper.license.key.1=94ae-e1cb-1fe9-8446
-wrapper.license.key.2=e41f-0f78-907d-a749
-wrapper.license.key.3=8c84-74bf-828f-cd70
-wrapper.license.key.4=12a0-ef48-ca43-f386
+wrapper.license.key.0=4844-0af0-665c-88f0
+wrapper.license.key.1=e6b8-05e5-9315-0dd9
+wrapper.license.key.2=20f3-8766-dc3c-7de5
+wrapper.license.key.3=0784-7c49-af90-6f36
+wrapper.license.key.4=458a-4cc2-ad2f-7437
