--- a/installers/include/wrapper-license-relative-path-go-agent.conf
+++ b/installers/include/wrapper-license-relative-path-go-agent.conf
@@ -6,14 +6,13 @@
 # wrapper.app.parameter.1=lib/agent-bootstrapper.jar
 
 wrapper.license.type=DEV
-wrapper.license.id=202205130000027
+wrapper.license.id=202305310000009
 wrapper.license.licensee=ThoughtWorks
 wrapper.license.group=Go
 wrapper.license.dev_application=GoCD Agent
 wrapper.license.features=64bit
-wrapper.license.upgrade_term.begin_date=2008-06-03
-wrapper.license.upgrade_term.end_date=2023-06-03
-wrapper.license.key.1=26ef-d0ba-3674-c88b
-wrapper.license.key.2=b7ed-6425-0dbe-506a
-wrapper.license.key.3=dade-57bc-462b-346e
-wrapper.license.key.4=97d6-41f5-aba0-f275
+wrapper.license.key.0=4844-0af0-665c-88f0
+wrapper.license.key.1=2ed3-f3da-ae97-5b84
+wrapper.license.key.2=a4ab-d252-7365-bdd6
+wrapper.license.key.3=9005-ca4e-d859-4649
+wrapper.license.key.4=9ca7-ad7f-33ea-a3a2
