--- a/installers/include/wrapper-license-relative-path-go-server.conf
+++ b/installers/include/wrapper-license-relative-path-go-server.conf
@@ -6,14 +6,13 @@
 # wrapper.app.parameter.1=lib/go.jar
 
 wrapper.license.type=DEV
-wrapper.license.id=202205130000028
+wrapper.license.id=202305310000008
 wrapper.license.licensee=ThoughtWorks
 wrapper.license.group=Go
 wrapper.license.dev_application=GoCD Server
 wrapper.license.features=64bit
-wrapper.license.upgrade_term.begin_date=2008-06-03
-wrapper.license.upgrade_term.end_date=2023-06-03
-wrapper.license.key.1=2d2c-52a3-4cb8-487c
-wrapper.license.key.2=c47f-250b-362a-5166
-wrapper.license.key.3=94ea-1556-3336-0b24
-wrapper.license.key.4=1cdc-9201-b2ff-04f9
+wrapper.license.key.0=4844-0af0-665c-88f0
+wrapper.license.key.1=629b-5715-aa45-4f1b
+wrapper.license.key.2=e1b9-8b23-e3cb-bf7a
+wrapper.license.key.3=5a3b-e6bc-87c0-5cc7
+wrapper.license.key.4=f031-f6f4-0ad2-5b0b
