--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -38,22 +38,7 @@ sourceSets {
 
 idea {
   module {
-    testSourceDirs += sourceSets.functionalTest.java.srcDirs
-
-
-    // some hax to fudge the intellij xml
-    iml.withXml {
-      def node = it.asNode()
-      def content = node.component.find { it.'@name' == 'NewModuleRootManager' }.content[0]
-      content.sourceFolder.each { sourceFolder ->
-        if (sourceFolder.@url?.endsWith('/resources')) {
-          sourceFolder.attributes().with {
-            boolean isTestSource = (remove('isTestSource') == 'true')
-            put('type', isTestSource ? 'java-test-resource' : 'java-resource')
-          }
-        }
-      }
-    }
+    testSources.from(sourceSets.functionalTest.java.srcDirs)
   }
 }
 
